--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#874bf6" />
-        <meta name="description" content="Streamsyn" />
+        <meta name="description" content="Twitcher" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Streamsyn</title>
+        <title>Twitcher</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
