--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#874bf6" />
-        <meta name="description" content="Twitcher" />
+        <meta name="description" content="Timestreams" />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -14,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Twitcher</title>
+        <title>Timestreams</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
